# youi-tv-onboarding-projects

./: README.md
locationSample/: index.youi.js  package.json
locationSample/__tests__/appium/: package-lock.json  package.json  wdio.android.conf.js  wdio.ios.conf.js  wdio.yimac.conf.js  wdio.yimac.package.conf.js  wdio.yitvos-simulator.conf.js  wdio.yitvos.conf.js
locationSample/__tests__/appium/test/specs/: app.test.js
locationSample/client/: manifest
locationSample/src/: App.js
locationSample/src/services/get-user-location-info/: getUserLocationInfo.js
locationSample/src/services/get-user-location-info/get-location-ip-based/: getLocationIPBased.js  parseIPStackResponse.js
locationSample/youi/: Project.cmake  SourceList.cmake
locationSample/youi/AE/assets/json/default/: serverConfig.json
locationSample/youi/src/: AppFactory.cpp
unsplash-search/: .babelrc  index.youi.js  package.json
unsplash-search/__tests__/appium/: README.md  wdio.android.conf.js  wdio.ios.conf.js  wdio.yimac.conf.js  wdio.yimac.package.conf.js  wdio.yitvos-simulator.conf.js  wdio.yitvos.conf.js
unsplash-search/client/: .gitignore  manifest
unsplash-search/youi/: Project.cmake  build.rb
unsplash-search/youi/src/: AppFactory.cpp
unsplashSearch/: .env.example  .gitignore  README.youi.md  package.json  rn-cli.config.js
unsplashSearch/__tests__/appium/: .babelrc  .gitignore  package-lock.json  package.json  wdio.android.conf.js  wdio.android.package.conf.js  wdio.bluesky.conf.js  wdio.connect-to-app.conf.js  wdio.ios.conf.js  wdio.yimac.conf.js  wdio.yimac.package.conf.js  wdio.yitvos-simulator.conf.js  wdio.yitvos.conf.js
unsplashSearch/__tests__/appium/test/pageobjects/: app.page.js
unsplashSearch/client/: build.rb  manifest
unsplashSearch/src/components/screens/search/components/: Search.js  SearchInput.js
unsplashSearch/src/components/screens/search/components/results/: Results.js  ResultsListItem.js  Tag.js
unsplashSearch/src/components/screens/search/routes/: Routes.js  route-names.js
unsplashSearch/src/components/screens/splash/components/: Splash.js
unsplashSearch/src/components/screens/splash/routes/: route-names.js
unsplashSearch/src/routes/: Routes.js  defaultOptions.js  route-names.js
unsplashSearch/src/services/: api.js
unsplashSearch/src/styles/: colors.js  index.js
unsplashSearch/src/styles/metrics/: helpers.js  index.js  tablet.js  tv.js
unsplashSearch/youi/: CMakeLists.txt  Project.cmake  generate.rb
unsplashSearch/youi/AE/: Player.aep
unsplashSearch/youi/AE/assets/: youi.assets_to_extract.txt
unsplashSearch/youi/AE/assets/layout/default/: Player_Arrow-Container.timeline  Player_Btn-Back-Container.layout  Player_Btn-Back.layout  Player_Btn-Back.timeline  Player_Btn-FFW.timeline  Player_Btn-Options.timeline  Player_Btn-PlayPause.layout  Player_Btn-PlayPause.timeline  Player_Buffering.timeline  Player_Error.layout  Player_Main.layout  Player_PlayPause-Container.layout  Player_Playback-Controls.timeline  Player_Player-Scrubber.timeline  Player_Preview.timeline  Player_Preview_Thumbnail_Image.layout  Player_Thumb.layout  Player_Thumb.timeline  Player_Video-Surface-View.layout  Player_placeholder-time.timeline
unsplashSearch/youi/src/: App.cpp  AppFactory.cpp
videoPlayback/: .gitignore  index.youi.js  package.json
videoPlayback/__tests__/appium/: Brewfile  wdio.android.conf.js  wdio.conf.js  wdio.ios.conf.js  wdio.yimac.conf.js  wdio.yimac.package.conf.js  wdio.yitvos-simulator.conf.js  wdio.yitvos.conf.js
videoPlayback/__tests__/appium/test/pageobjects/: page.js
videoPlayback/client/: manifest
videoPlayback/src/components/: CurrentTime.js  PlaybackControls.js  Slider.js  VideoContainer.js  VideoSurface.js
videoPlayback/youi/: Project.cmake
videoPlayback/youi/AE/assets/json/default/: clientConfig.json
videoPlayback/youi/AE/assets/layout/default/: Player_Arrow-Container.layout  Player_Btn-Back-Container.timeline  Player_Btn-FFW.layout  Player_Btn-Options.layout  Player_Buffering.layout  Player_Error.timeline  Player_Main.timeline  Player_PlayPause-Container.timeline  Player_Playback-Controls.layout  Player_Player-ScrollBar.layout  Player_Player-ScrollBar.timeline  Player_Player-Scrubber.layout  Player_Preview.layout  Player_Preview_Thumbnail_Image.timeline  Player_VideoRef.layout  Player_VideoRef.timeline  Player_placeholder-time.layout
videoPlayback/youi/src/: AppFactory.cpp
weatherForecast/: .babelrc  .env.example  package.json
weatherForecast/__tests__/appium/: wdio.android.conf.js  wdio.ios.conf.js  wdio.yimac.conf.js  wdio.yimac.package.conf.js  wdio.yitvos-simulator.conf.js  wdio.yitvos.conf.js
weatherForecast/client/: manifest
weatherForecast/src/: App.js
weatherForecast/src/components/common/: AboutDeviceInfo.js  ActionButton.js  ActivityLoading.js  Header.js  SpinComponent.js
weatherForecast/src/components/screens/main/components/: Lander.js
weatherForecast/src/components/screens/main/components/information/: Information.js
weatherForecast/src/components/screens/main/components/lander/: AboutDeviceInfo.js  Header.js  Lander.js
weatherForecast/src/components/screens/main/routes/: Routes.js  route-names.js
weatherForecast/src/components/screens/splash/components/: Splash.js
weatherForecast/src/components/screens/splash/routes/: Routes.js
weatherForecast/src/routes/: Routes.js  defaultOptions.js  route-names.js
weatherForecast/src/services/: getWeatherByCityName.js  getWeatherData.js  getWeekForecastByCityId.js  index.js
weatherForecast/src/services/get-user-location-info/: getUserLocationInfo.js
weatherForecast/src/services/get-user-location-info/get-location-ip-based/: getExternalUserIP.js  getLocationIPBased.js
weatherForecast/src/services/get-user-location-info/get-mobile-location-info/: getMobileLocationInfo.js  handleAndroidLocationPermission.js
weatherForecast/src/styles/: colors.js
weatherForecast/src/utils/: constants.js  storage-manager.js
weatherForecast/youi/: Project.cmake
weatherForecast/youi/src/: App.h  AppFactory.cpp
(+8 files in other folders)
